# b150-genaiops

./: .gitignore  CONTRIBUTING.md  README.md  main.py  pyproject.toml
01_day1/: pyproject.toml
02_day2/: main.py  pyproject.toml  test.ipynb
03_python_basics/: 1.0-basic.ipynb  1.1-Variables.ipynb  1.2-Datatypes.ipynb  1.3-operators.ipynb  1.4-assignment_python_basics.ipynb  1.5-assignment_python_basics_solutions.ipynb  test.py
04_Control_Flow/: 2.1 Conditionals.ipynb  2.2 Loops.ipynb  assignment_solutions.ipynb
05_Data_Structures/: 3.1-Lists.ipynb  3.2-Tuples.ipynb  3.3-Sets.ipynb  3.4-Dictionaries.ipynb  tuple_assignment_solution.ipynb
06.1_Modules/: 5.1-import.ipynb  turtle1.py
06_Functions/: 4.1-functions.ipynb  4.3-Lambda.ipynb  4.4-Mapsfunction.ipynb  4.5-filterfunction.ipynb  4.6-args_kwargs.ipynb  functionsassignmentsoln.ipynb
07_File_Handling/: 6.1-fileoperation.ipynb  6.2-filepath.ipynb  destination.txt
08_Exception_Handling/: 7.1-exception.ipynb
09_Class_And_Objects/: 8.1-oops.ipynb  8.2-inheritance.ipynb  8.3-Polymorphism.ipynb  8.5-Abstraction.ipynb  oopssolution.ipynb  test.ipynb
10.1_Logging_In_Python/: 10.1-logging.ipynb  app.py
10_Data_Analysis_With_Python/: 9.1-numpy.ipynb  9.2-pandas.ipynb  9.3-datamanipulation.ipynb  9.4-readdata.ipynb  data.csv  df_excel  main.py  pyproject.toml
11_MoreExamples/: 01_Deterministic_guardrails.ipynb  README.md  main.py  pyproject.toml
12_Flask/: README.md
13_dvc/: 1.Readme_dvc.md
14_Mlflow/: 1.test.py  3.1mltrain.py  3.mltrain.py  Readme.md  whynotLLm.md
15_Docker_Kubernetes/: 1.nginx-deploy.yml  2.svc-clusterIp.yml  Readme.md  (+2 more)
day2/: pyproject.toml
day2/notebooks/: 01_initial.ipynb
(+29 files in other folders)
